<resources>
    <string name="app_name">Hello World</string>
    <string name="text_name">你好 世界</string>
    <string name="todo">logo</string>
    <string name="name">请输入用户名</string>
    <string name="password">请输入密码</string>
    <string name="button">登录</string>
    <string name="textview">TextView</string>
    <string name="user">手机号/邮箱</string>
    <string name="taobao_login">淘宝账号登录</string>
    <string name="forget">忘记密码？</string>
    <string name="registered">注册</string>
    <string name="register_name">昵称</string>
    <string name="sex_boy">男</string>
    <string name="sex_girl">女</string>
    <string name="login_passworld">登录密码</string>
    <string name="confirm_passwold">确认密码</string>
    <string name="news">接受消息推送</string>
    <string name="policy">同意本软件的用户服务协议和隐私政策</string>
    <string name="nine_tailed_fox">九尾狐妖</string>
    <string name="a_raccoon">阿狸</string>
    <string name="mage">法师</string>
    <string name="assassin">刺客</string>
    <string name="physical_attack">物理攻击</string>
    <string name="magic_attack">魔法攻击</string>
    <string name="defense_attack">防御攻击</string>
    <string name="difficulty">上手难度</string>
    <string name="K">K/DA  阿狸</string>
    <string name="Top">Display</string>
    <string name="left">左边</string>
    <string name="right">右边</string>
    <string name="switch_sw">开关</string>
    <string name="determine">确定</string>
    <string name="Value">请输入数值</string>
    <string name="an">Android</string>
    <string name="ap">Apple</string>
    <string name="android">Android</string>
    <string name="apple">Apple</string>
    <string name="sql">SQL</string>
    <string name="open">开</string>
    <string name="close">关</string>
    <string name="star_rating">星评价</string>
    <string name="phone">手机号码</string>
    <string name="sex">性别</string>
    <string name="welcome">欢迎使用···</string>
    <string name="verification">验证信息</string>
    <string name="new_pwd">请输入新的密码</string>
</resources>
