<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPwdActivity">

    <TextView
        android:id="@+id/reset_veri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verification"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/reset_phone"
        app:layout_constraintEnd_toStartOf="@+id/guideline35"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline34"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/reset_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:drawableStart="@drawable/phone"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"
        app:layout_constraintBottom_toTopOf="@+id/reset_name"
        app:layout_constraintEnd_toStartOf="@+id/guideline35"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline34"
        app:layout_constraintTop_toBottomOf="@+id/reset_veri" />

    <EditText
        android:id="@+id/reset_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:drawableStart="@drawable/username"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/register_name"
        android:inputType="textPersonName"
        android:text="@string/register_name"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
        app:layout_constraintEnd_toStartOf="@+id/guideline35"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline34"
        app:layout_constraintTop_toBottomOf="@+id/reset_phone" />

    <Button
        android:id="@+id/button_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/determine"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline35"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline34"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/button_reset"
        app:layout_constraintEnd_toStartOf="@+id/guideline35"
        app:layout_constraintHorizontal_bias="0.014"
        app:layout_constraintStart_toStartOf="@+id/guideline34"
        app:layout_constraintTop_toBottomOf="@+id/reset_name">

        <ImageView
            android:id="@+id/imageView20"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/sex" />

        <RadioGroup
            android:id="@+id/radio_Group_Sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="76dp"
            tools:layout_editor_absoluteY="562dp">

            <RadioButton
                android:id="@+id/radio_man"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sex_boy"
                tools:layout_editor_absoluteX="76dp"
                tools:layout_editor_absoluteY="562dp" />

            <RadioButton
                android:id="@+id/radio_woman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sex_girl"
                tools:layout_editor_absoluteX="122dp"
                tools:layout_editor_absoluteY="562dp" />
        </RadioGroup>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>