<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdatePwdActivity">

    <TextView
        android:id="@+id/text_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_pwd"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline37"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/guideline36"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.079" />

    <EditText
        android:id="@+id/update_pwd"
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:drawableStart="@drawable/password"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="numberPassword"
        app:layout_constraintBottom_toTopOf="@+id/update_pwd_ok"
        app:layout_constraintEnd_toStartOf="@+id/guideline37"
        app:layout_constraintStart_toStartOf="@+id/guideline36"
        app:layout_constraintTop_toBottomOf="@+id/text_update" />

    <EditText
        android:id="@+id/update_pwd_ok"
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:drawableStart="@drawable/password"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/confirm_passwold"
        android:inputType="numberPassword"
        app:layout_constraintBottom_toTopOf="@+id/button_update"
        app:layout_constraintEnd_toEndOf="@+id/update_pwd"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/update_pwd"
        app:layout_constraintTop_toBottomOf="@+id/update_pwd" />

    <Button
        android:id="@+id/button_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/determine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/update_pwd_ok"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/update_pwd_ok"
        app:layout_constraintTop_toBottomOf="@+id/update_pwd_ok" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

</androidx.constraintlayout.widget.ConstraintLayout>